turned from array of one string with all stacks with array of separate stacks.